--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install easyocr pylint openai flask flask_cors
+        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121/torch_stable.html
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
